--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "首页"
     url: https://xiaoyanming.com/
   - title: "关于我"
-    url: https://mmistakes.github.io/minimal-mistakes/about/
+    url: https://xiaoyanming.com/about.html/
   - title: "文章分类"
     url: /year-archive/
   # - title: "Sample Collections"
